switch dotenv to dotenvx, add new notes to mongo

--- a/example/notes-backend/package.json
+++ b/example/notes-backend/package.json
@@ -15,8 +15,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.26.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.6",
     "express": "^4.21.1",
     "mongoose": "^8.8.3"
   },
