--- a/example/notes-backend/package.json
+++ b/example/notes-backend/package.json
@@ -22,7 +22,7 @@
     "mongoose": "^8.8.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.16.0",
+    "@stylistic/eslint-plugin-js": "^9.16.0",
     "@flydotio/dockerfile": "^0.5.9",
     "@stylistic/eslint-plugin-js": "^2.11.0",
     "eslint": "^9.16.0",
