--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -17,6 +17,9 @@
     "mongoose": "^8.8.3"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin-js": "^2.11.0",
+    "eslint": "^9.16.0",
+    "globals": "^15.13.0",
     "nodemon": "^3.1.7"
   }
 }
