--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -14,6 +14,7 @@
     "@dotenvx/dotenvx": "^1.28.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "lodash": "^4.17.21",
     "mongoose": "^8.8.3"
   },
   "devDependencies": {
