--- a/example/notes-backend/package.json
+++ b/example/notes-backend/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env  NODE_ENV=test node --test",
     "build:ui": "rm -rf dist && cd ../notes-frontend/ && npm run build && cp -r dist ../notes-backend",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs",
-    "lint": "eslint .",
-    "test": "node --test"
+    "lint": "eslint ."
   },
   "author": "changsyuanwu",
   "license": "ISC",
@@ -18,6 +18,7 @@
   "dependencies": {
     "@dotenvx/dotenvx": "^1.26.2",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.21.1",
     "mongoose": "^8.8.3"
   },
