--- a/example/notes-backend/package.json
+++ b/example/notes-backend/package.json
@@ -27,6 +27,7 @@
     "@stylistic/eslint-plugin-js": "^2.11.0",
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
