--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node --test"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env  NODE_ENV=test node --test"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +13,8 @@
   "dependencies": {
     "@dotenvx/dotenvx": "^1.28.0",
     "cors": "^2.8.5",
-    "express": "^4.21.1",
+    "cross-env": "^7.0.3",
+    "express": "^5.0.1",
     "lodash": "^4.17.21",
     "mongoose": "^8.8.3"
   },
@@ -21,6 +22,7 @@
     "@stylistic/eslint-plugin-js": "^2.11.0",
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
