--- a/example/notes-backend/package.json
+++ b/example/notes-backend/package.json
@@ -17,6 +17,7 @@
   "description": "",
   "dependencies": {
     "@dotenvx/dotenvx": "^1.26.2",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^5.0.1",
