--- a/example/notes-backend/package.json
+++ b/example/notes-backend/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3"
   },
   "devDependencies": {
