--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,16 +5,18 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env  NODE_ENV=test node --test"
+    "test": "cross-env  NODE_ENV=test node --test --test-concurrency=1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@dotenvx/dotenvx": "^1.28.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.8.3"
   },
