--- a/part7/webpack-example/package.json
+++ b/part7/webpack-example/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "babel-loader": "^9.2.1",
     "webpack": "^5.97.1",
