--- a/part7/bloglist-frontend-redux/package.json
+++ b/part7/bloglist-frontend-redux/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
