--- a/part7/bloglist-frontend-redux/package.json
+++ b/part7/bloglist-frontend-redux/package.json
@@ -11,6 +11,11 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
