--- a/part8/graphql-phonebook/package.json
+++ b/part8/graphql-phonebook/package.json
@@ -8,11 +8,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@apollo/server": "^4.11.3",
     "graphql": "^16.10.0",
     "uuid": "^11.0.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
