--- a/part8/library-frontend/package.json
+++ b/part8/library-frontend/package.json
@@ -13,7 +13,8 @@
     "@apollo/client": "^3.12.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "react-select": "^5.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
