--- a/part8/graphql-phonebook-backend/package.json
+++ b/part8/graphql-phonebook-backend/package.json
@@ -15,6 +15,7 @@
     "@apollo/server": "^4.11.3",
     "@dotenvx/dotenvx": "^1.34.0",
     "graphql": "^16.10.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
     "uuid": "^11.0.5"
   },
