--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@apollo/server": "^4.11.3",
     "@dotenvx/dotenvx": "^1.35.0",
+    "bcrypt": "^5.1.1",
     "graphql": "^16.10.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.6",
