--- a/part8/graphql-phonebook-backend/package.json
+++ b/part8/graphql-phonebook-backend/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "@apollo/server": "^4.11.3",
     "@dotenvx/dotenvx": "^1.34.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "graphql": "^16.10.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.6",
-    "uuid": "^11.0.5"
+    "mongoose": "^8.9.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
