--- a/part8/library-backend/package.json
+++ b/part8/library-backend/package.json
@@ -17,12 +17,16 @@
   "dependencies": {
     "@apollo/server": "^4.11.3",
     "@dotenvx/dotenvx": "^1.35.0",
+    "@graphql-tools/schema": "^10.0.18",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "graphql": "^16.10.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^6.0.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.6",
-    "mongoose-unique-validator": "^4.0.1"
+    "mongoose-unique-validator": "^4.0.1",
+    "ws": "^8.18.0"
   }
 }
