--- a/part9-typescript/example/package.json
+++ b/part9-typescript/example/package.json
@@ -14,11 +14,15 @@
     "dev": "ts-node-dev index.ts"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.5",
+    "eslint": "^9.21.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.25.0"
   },
   "dependencies": {
     "express": "^4.21.2"
