--- a/part9-typescript/flight-diaries/package.json
+++ b/part9-typescript/flight-diaries/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "ts-node-dev index.ts",
     "lint": "eslint .",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "start": "node build/index.js"
   },
   "dependencies": {
     "express": "^4.21.2"
