--- a/part9-typescript/patientor/backend/package.json
+++ b/part9-typescript/patientor/backend/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@stylistic/eslint-plugin": "^4.2.0",
+    "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
     "eslint": "^9.21.0",
@@ -23,6 +24,7 @@
     "typescript-eslint": "^8.25.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.2"
   }
 }
