--- a/part9-typescript/flight-diaries/package.json
+++ b/part9-typescript/flight-diaries/package.json
@@ -7,7 +7,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev index.ts",
+    "dev": "ts-node-dev src/index.ts",
     "lint": "eslint .",
     "tsc": "tsc",
     "start": "node build/index.js"
