--- a/part9-typescript/flight-diaries/package.json
+++ b/part9-typescript/flight-diaries/package.json
@@ -13,7 +13,8 @@
     "start": "node build/index.js"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
