--- a/part9-typescript/flight-diaries/backend/package.json
+++ b/part9-typescript/flight-diaries/backend/package.json
@@ -13,6 +13,8 @@
     "start": "node build/index.js"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "zod": "^3.24.2"
   },
