--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "part3-node-express/phonebook-backend"]
 	path = part3-node-express/phonebook-backend
 	url = https://github.com/changsyuanwu/fullstackopen-phonebook-backend
+[submodule "part10-react-native/rate-repository-app"]
+	path = part10-react-native/rate-repository-app
+	url = https://github.com/changsyuanwu/fullstackopen-rate-repository-app
